<resources>
    <string name="app_name">RoadsideAssistance</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="payment_string">Payment</string>
    <string name="profile_string">Profile</string>
    <string name="account_history_string">Account History</string>
    <string name="about_string">About</string>
    <string name="subheader">Subheader</string>
    <string name="terms_string">Terms </string>
    <string name="settings_string">Settings</string>
    <string name="logout_string">Logout</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
